@@ -313,8 +313,14 @@ body {
 	height: 104px;
 	background: url("../images/shell/metrics.png") no-repeat 0 0;
 }
+@keyframes energy-blink {
+	0%  { background-position: 0 0; }
+	50% { background-position: -52px 0; }
+}
 .game .right-frame .bottom-right .resources .metrics.blicked {
-	background-position: -52px 0;
+	animation: energy-blink 1s steps(1) infinite;
+	-webkit-animation: energy-blink 1s steps(1) infinite;
+	-moz-animation: energy-blink 1s steps(1) infinite;
 }
 .game .right-frame .bottom-right .resources .metrics #energy_scale {
 	margin: 16px 0 0 8px;
