@@ -77,7 +77,7 @@
 			</div>
 			<div class="right-frame">
 				<div class="tab-buttons">
-					<div class="tab build active" data-panel="panel_build"></div>
+					<div class="tab build active" data-panel="panel_build" id="tab_button_build"></div>
 					<div class="tab comms"></div>
 					<div class="tab menu"></div>
 					<div class="tab orders"></div>
@@ -174,8 +174,8 @@
 					</div>
 					<div class="resources">
 						<div class="switches"></div>
-						<div class="metrics" id="metrics_box">
-							<canvas id="energy_scale" width="17" height="81"></canvas>
+						<div class="metrics blicked" id="metrics_box">
+							<canvas id="energy_scale" width="39" height="81"></canvas>
 						</div>
 					</div>
 				</div>
