@@ -1,23 +1,22 @@
-function EnergyDraw()
+function EnergyWaterDraw()
 {
 	this._max = 0;
 	this._current = 0;
+	this._water_current = 0;
 	
-	this._last_sound_notification = (new Date()).getTime() + 10000;
+	this._last_sound_notification = (new Date()).getTime() + 15000;
 	this._last_blink = this._last_sound_notification;
 	this._ctx = $('#energy_scale').get(0).getContext('2d');
 	
-	this.draw = function(time, full_redraw)
+	$('#energy_scale').click(function(event){
+		if (event.offsetX >= 29)
+			game.energyDraw.waterClick();
+	});
+	
+	this.enrgyNotification = function(time)
 	{
 		if (this._max <= this._current)
 		{
-			//Blink sign every 1 sec
-			if ((time - this._last_blink) > 500)
-			{
-				$('#metrics_box').toggleClass('blicked');
-				this._last_blink = time;
-			}
-			
 			//Make sound every 15 sec
 			if ((time - this._last_sound_notification) > 15000)
 			{
@@ -25,67 +24,128 @@ function EnergyDraw()
 				this._last_sound_notification = time;
 			}
 		}
+	}
+	
+	this.drawAll = function()
+	{
+		this.waterDraw();
+		this.energyDraw();
+	}
+	
+	this.waterDraw = function()
+	{
+		var CANVAS_H = 81, bar_size = parseInt(this._water_current/200*CANVAS_H);
 		
-		if (full_redraw)
+		//Background
+		this._ctx.fillStyle = '#bbbbbb';
+		this._ctx.fillRect(29, 0, 9, CANVAS_H);
+		
+		//Water level
+		this._ctx.fillStyle = '#00a5ff';
+		this._ctx.fillRect(29, CANVAS_H - bar_size, 9, bar_size);
+	}
+	
+	this.waterSetLevel = function(level)
+	{
+		if (level > this._water_current)
 		{
-			var SECTION_STEP = 2500, CANVAS_H = 81;
-			var bar_color = '#ff0000', max_val = Math.max(2500, Math.ceil(Math.max(this._max, this._current) / SECTION_STEP)*SECTION_STEP), 
-				bar_size = parseInt(this._max/max_val*CANVAS_H), cur_pos = 80.5-parseInt(this._current/max_val*CANVAS_H);
-				
-			if (this._max > this._current)
-			{
-				$('#metrics_box').removeClass('blicked');
-				bar_color = '#a5ff6c';
-			}
-			else
-				bar_color = ((this._current - this._max) > 250) ? '#ff0e00' : '#ffff00';
-			
-			//Background
-			this._ctx.fillStyle = '#696969';
-			this._ctx.fillRect(0, 0, 17, CANVAS_H);
-			
-			//Draw bar
-			this._ctx.fillStyle = bar_color;
-			this._ctx.fillRect(0, CANVAS_H - bar_size, 17, bar_size);
-			
-			//Draw current use
-			this._ctx.lineWidth = 1;
-			this._ctx.strokeStyle = '#fdfdfd';
-			this._ctx.beginPath();
-			this._ctx.moveTo(0, cur_pos);
-			this._ctx.lineTo(17, cur_pos);
-			this._ctx.stroke();
-			this._ctx.strokeStyle = '#000000';
-			this._ctx.beginPath();
-			this._ctx.moveTo(0, cur_pos+1);
-			this._ctx.lineTo(17, cur_pos+1);
-			this._ctx.stroke();
-			
-			//Draw sections
-			var colors = ['#c9c9c9', '#000000'], cur_section, offset, section_size = CANVAS_H/(max_val/500);
-			for (offset = 0; offset<2; ++offset)
-			{
-				this._ctx.strokeStyle = colors[offset];
-				this._ctx.beginPath();
-				for (cur_section = 0; cur_section < CANVAS_H; cur_section += section_size)
-				{
-					this._ctx.moveTo(0, parseInt(cur_section) + offset + 0.5);
-					this._ctx.lineTo(4, parseInt(cur_section) + offset + 0.5);
-				}
-				this._ctx.stroke();
-			}
+			this._water_current = level;
+			this.waterDraw();
 		}
 	}
 	
-	this.addToMax = function(val)
+	this.waterReset = function()
 	{
-		this._max += val;
-		this.draw((new Date()).getTime(), true);
+		var i;
+		
+		this._water_current = 0;
+		
+		for (i in game.objects)
+			if ((game.objects[i] instanceof WaterLaunchPadBuilding) && (game.objects[i].player == PLAYER_HUMAN))
+				if (game.objects[i].res_now > this._water_current)
+					this._water_current = game.objects[i].res_now;
+		
+		this.waterDraw();
 	}
 	
-	this.addToCurrent = function(val)
+	this.waterClick = function()
+	{
+		var i, obj = null, max = 0;
+		
+		for (i in game.objects)
+			if ((game.objects[i] instanceof WaterLaunchPadBuilding) && (game.objects[i].player == PLAYER_HUMAN))
+				if (game.objects[i].res_now > max)
+				{
+					max = game.objects[i].res_now;
+					obj = game.objects[i];
+				}
+				
+		if (obj !== null)
+			obj.sellWater();
+	}
+	
+	this.energyDraw = function()
+	{
+		var SECTION_STEP = 2500, CANVAS_H = 81;
+		var bar_color = '#ff0000', max_val = Math.max(2500, Math.ceil(Math.max(this._max, this._current) / SECTION_STEP)*SECTION_STEP), 
+			bar_size = parseInt(this._max/max_val*CANVAS_H), cur_pos = 80.5-parseInt(this._current/max_val*CANVAS_H);
+
+		if (this._max > this._current)
+		{
+			$('#metrics_box').removeClass('blicked');
+			bar_color = '#a5ff6c';
+		}
+		else
+		{
+			$('#metrics_box').addClass('blicked');
+			bar_color = ((this._current - this._max) > 250) ? '#ff0e00' : '#ffff00';
+		}
+
+		//Background
+		this._ctx.fillStyle = '#bbbbbb';
+		this._ctx.fillRect(0, 0, 17, CANVAS_H);
+
+		//Draw bar
+		this._ctx.fillStyle = bar_color;
+		this._ctx.fillRect(0, CANVAS_H - bar_size, 17, bar_size);
+
+		//Draw current use
+		this._ctx.lineWidth = 1;
+		this._ctx.strokeStyle = '#fdfdfd';
+		this._ctx.beginPath();
+		this._ctx.moveTo(0, cur_pos);
+		this._ctx.lineTo(17, cur_pos);
+		this._ctx.stroke();
+		this._ctx.strokeStyle = '#000000';
+		this._ctx.beginPath();
+		this._ctx.moveTo(0, cur_pos+1);
+		this._ctx.lineTo(17, cur_pos+1);
+		this._ctx.stroke();
+
+		//Draw sections
+		var colors = ['#c9c9c9', '#000000'], cur_section, offset, section_size = CANVAS_H/(max_val/500);
+		for (offset = 0; offset<2; ++offset)
+		{
+			this._ctx.strokeStyle = colors[offset];
+			this._ctx.beginPath();
+			for (cur_section = 0; cur_section < CANVAS_H; cur_section += section_size)
+			{
+				this._ctx.moveTo(0, parseInt(cur_section) + offset + 0.5);
+				this._ctx.lineTo(4, parseInt(cur_section) + offset + 0.5);
+			}
+			this._ctx.stroke();
+		}
+	}
+	
+	this.energyAddToMax = function(val)
+	{
+		this._max += val;
+		this.energyDraw();
+	}
+	
+	this.energyAddToCurrent = function(val)
 	{
 		this._current += val;
-		this.draw((new Date()).getTime(), true);
+		this.energyDraw();
 	}
 }
